--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul id="list"></ul>
             <div class="todo-items-info">
                 <div class="items-left">
-                    <span id="taskCount">0</span>
+                    <span id="taskCount">Task(0)</span>
                 </div>
                 <div class="item-statuses">
                     <span class="active">All</span>
