--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="todo-container">
         <div class="todo-content">
+            <div class="title"><h1>Todo App</h1></div>
             <div class="todo-textbox-container">
                 <input type="text" id="task" class="add-task-input" placeholder="Add a new task...">
                 <i id="add" class="fa-solid fa-plus fa-lg"></i>
